Codeblock: Fix inlines alignment on headers

--- a/assets/css/v2/style.css
+++ b/assets/css/v2/style.css
@@ -1786,6 +1786,8 @@ a:hover {
   position: relative;
   display: flex;
   color: oklch(var(--color-foreground));
+  gap: var(--space-3xs);
+  align-items: center;
 }
 
 .headerlink::before {
